adding the src folder and the main js document

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     </style>
 </head>
 <body>
-    <h1>Hello there! </h1>
+    <h1>Hello there!</h1>
+    <p> Welcome to the country app, this app is create with JS only!</p>
+    <div id="App"></div>
+    <script src="../src/index.js"></script>
 </body>
 </html>
