--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/style/style.css"/>
     <title>Country-Js-App</title>
-    <style>
-    </style>
-</head>
+ </head>
 <body>
-    <h1>Hello there!</h1>
-    <p> Welcome to the country app, this app is create with JS only!</p>
     <div id="App"></div>
     <script src="../src/index.js"></script>
 </body>
