--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/style/style.css"/>
+    <link rel="stylesheet" href="../src/style/card-section.css"/>
+    <link rel="stylesheet" href="../src/style/filter.css"/>
+    <link rel="stylesheet" href="../src/style/modal.css"/>
     <title>Country-Js-App</title>
  </head>
 <body>
